<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shaking</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Main -->
    <string name="main_shaking_count_down">Start shaking in</string>
    <string name="main_set_alarm">Set Alarm</string>
    <string name="main_cancel_alarm">Cancel Alarm</string>
    <string name="main_add_an_alarm_to_shake">Add an alarm to Shake!</string>
    <string name="main_shake_now">Shake now!</string>
    <string name="main_go">Go</string>
    <string name="main_press_back_again_to_exit_app">Press back again to exit Shaking</string>

    <!-- Alarm Dialog -->
    <string name="alarm_dialog_time_to_do_some_excercise">Time to do some excercise!!!</string>
    <string name="alarm_dialog_ok">OK</string>
    <string name="alarm_dialog_later">Later</string>
    <string name="alarm_dialog_exercise">Excercise!</string>
    

    <!-- Intent -->
    <string name="intent_filter_action_shaking">INTENT_FILTER_SHAKING</string>

    <!-- Notification -->
    <string name="notification_ticker_time_to_shake">Time to Shake !</string>

    <!-- Select Activity -->
    <string name="select_select_a_position">Select a place !</string>
    <string name="select_head">Head</string>
    <string name="select_hand">Hand</string>
    <string name="select_waist">Waist</string>
    <string name="select_foot">Foot</string>

    <!-- Youtube -->
    <string name="youtube_error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

</resources>