<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/dialog_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:animateLayoutChanges="true" >

        <RelativeLayout
            android:id="@+id/dialog_titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="5dp" >

            <ImageView
                android:id="@+id/dialog_title_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/dialog_title_image"
                android:layout_toRightOf="@id/dialog_title_image"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="30sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:id="@+id/dialog_contentLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/dialog_messageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="This is a custom dialog"
                android:textColor="#000000"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center_horizontal" >

                <Button
                    android:id="@+id/dialog_laterButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_button_selector"
                    android:text="@string/alarm_dialog_later" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <Button
                    android:id="@+id/dialog_okButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_button_selector"
                    android:text="@string/alarm_dialog_ok" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
/

</LinearLayout>